fixing the input value to insert the city

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Weather App</h1>
         <div class="conteiner">
             <div class="form-input-container">
-                <input type="text" placeholder="Digite o nome da cidade" value="Belo Horizonte" class="city-input"/>
+                <input type="text" placeholder="Digite o nome da cidade" class="city-input"/>
                 <button class="search"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
         </div>
